# SyLog

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deps.cmake
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  sylog_bench.cpp
cmake/: CppDeps.cmake  SyLogConfig.cmake.in  SyLogOptions.cmake  SyLogStaticAnalysis.cmake  SyLogWorkers.cmake
docs/: architecture.md  getting_started.md  release_checklist.md  severity.md
docs/api/: examples.md  lifecycle.md  public_api.md  queue.md  renderers_filters.md  routing.md  sinks.md
docs/benchmarks/: scenarios.md
docs/internals/: async_pipeline.md  crossbar_sink_design.md  dependency_boundary.md
examples/: CMakeLists.txt  async_workers.cpp  basic.cpp  custom_severity.cpp  routing.cpp
include/sylog/: delivery.hpp  event.hpp  export.hpp  logger.hpp  renderer.hpp  severity.hpp  sink.hpp  sylog.hpp
src/: CMakeLists.txt  delivery.cpp  logger.cpp
src/async/: sink_crossbar.cpp  sink_crossbar.hpp  workers_event_queue.cpp  workers_event_queue.hpp
src/renderers/: json_renderer.cpp  pattern_renderer.cpp
src/sinks/: console_sink.cpp  file_sink.cpp
tests/: CMakeLists.txt  test_async.cpp  test_crossbar_sink.cpp  test_file_rotation.cpp  test_filters.cpp  test_helpers.hpp  test_main.cpp  test_pipeline_lifecycle.cpp  test_pipeline_stress.cpp  test_queue_strategies.cpp  test_renderers.cpp  test_stress_main.cpp
tools/: CMakeLists.txt  sylogctl.cpp
